map and footer sections

--- a/style.css
+++ b/style.css
@@ -142,40 +142,43 @@ body {
     -moz-border-radius: 999px;
     border-radius: 999px; }
 
-.portfollio-section .vid-top {
-  background-image: url("images/foto-top.png");
-  background-repeat: no-repeat; }
-.portfollio-section .vid-bot {
-  background-image: url("images/foto-bottom.png");
-  background-repeat: no-repeat; }
-.portfollio-section .port-content-top {
-  height: 65vh;
-  text-align: left; }
-  .portfollio-section .port-content-top h2 {
-    margin-left: 150px;
-    margin-top: 150px;
-    font-size: 50px;
-    background: linear-gradient(45deg, #c10029, #e06a00);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; }
-  .portfollio-section .port-content-top p {
-    width: 30vw;
-    margin-left: 150px; }
-  .portfollio-section .port-content-top .port-btn-1 {
-    background-color: #4964a9;
-    color: white;
-    border-radius: 25px;
-    width: 180px;
-    padding: 10px;
-    margin-top: 5vh;
-    margin-left: 150px; }
-  .portfollio-section .port-content-top .port-btn-1:hover {
+.portfollio-section {
+  padding-right: 0px;
+  padding-left: 0px; }
+  .portfollio-section .vid-top {
+    background-image: url("images/foto-top.png");
+    background-repeat: no-repeat; }
+  .portfollio-section .vid-bot {
+    background-image: url("images/foto-bottom.png");
+    background-repeat: no-repeat; }
+  .portfollio-section .port-content-top {
+    height: 65vh;
+    text-align: left; }
+    .portfollio-section .port-content-top h2 {
+      margin-left: 150px;
+      margin-top: 150px;
+      font-size: 50px;
+      background: linear-gradient(45deg, #c10029, #e06a00);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent; }
+    .portfollio-section .port-content-top p {
+      width: 30vw;
+      margin-left: 150px; }
+    .portfollio-section .port-content-top .port-btn-1 {
+      background-color: #4964a9;
+      color: white;
+      border-radius: 25px;
+      width: 180px;
+      padding: 10px;
+      margin-top: 5vh;
+      margin-left: 150px; }
+    .portfollio-section .port-content-top .port-btn-1:hover {
+      transform: scale(1.1); }
+  .portfollio-section .play-vid {
+    margin-left: 400px;
+    margin-top: 250px; }
+  .portfollio-section .play-vid:hover {
     transform: scale(1.1); }
-.portfollio-section .play-vid {
-  margin-left: 400px;
-  margin-top: 250px; }
-.portfollio-section .play-vid:hover {
-  transform: scale(1.1); }
 
 .newsletter-section {
   background-image: url("images/news-bg.png");
@@ -217,5 +220,21 @@ body {
     background-position: 0 100%;
     color: white;
     border: 1px solid white; }
+
+.map-section {
+  width: 100%;
+  height: 60vh; }
+
+#map {
+  height: 60vh;
+  width: 100%; }
+
+.footer-section {
+  height: 25vh;
+  text-align: center; }
+  .footer-section p {
+    padding-top: 5vh;
+    opacity: 0.5;
+    color: grey; }
 
 /*# sourceMappingURL=style.css.map */
