--- a/style.scss
+++ b/style.scss
@@ -154,7 +154,8 @@ body {
     }
 }
 .portfollio-section{
-    
+    padding-right: 0px; 
+    padding-left: 0px;
     .vid-top{
         background-image: url("images/foto-top.png");
         background-repeat: no-repeat;
@@ -240,4 +241,22 @@ body {
         background-position: 0 100%;
         color: white;
         border: 1px solid white; }
+}
+.map-section {
+    width: 100%;
+    
+    height: 60vh; }
+  
+  #map {
+    height: 60vh;
+    width: 100%; }
+.footer-section{
+    height: 25vh;
+    text-align: center;
+    p{
+    padding-top:5vh;
+    opacity: 0.5;
+    color: grey;
+    
+    }
 }
