--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ body {
   height: 1px;
   line-height: 15px; }
 
+.navigation-res {
+  display: none; }
+  .navigation-res .btn-menu-res {
+    background-color: white;
+    color: #e06a00;
+    border-color: white;
+    width: 100px; }
+
 .logo {
   font-size: 45px;
   color: white;
@@ -147,10 +155,16 @@ body {
   padding-left: 0px; }
   .portfollio-section .vid-top {
     background-image: url("images/foto-top.png");
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
   .portfollio-section .vid-bot {
     background-image: url("images/foto-bottom.png");
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
   .portfollio-section .port-content-top {
     height: 65vh;
     text-align: left; }
@@ -174,9 +188,6 @@ body {
       margin-left: 150px; }
     .portfollio-section .port-content-top .port-btn-1:hover {
       transform: scale(1.1); }
-  .portfollio-section .play-vid {
-    margin-left: 400px;
-    margin-top: 250px; }
   .portfollio-section .play-vid:hover {
     transform: scale(1.1); }
 
@@ -236,5 +247,75 @@ body {
     padding-top: 5vh;
     opacity: 0.5;
     color: grey; }
+
+@media (max-width: 768px) {
+  .navigation {
+    display: none; }
+
+  .navigation-res {
+    display: block;
+    float: right; }
+
+  .icon-section {
+    height: 80vh; }
+
+  .drone-section {
+    height: 80vh;
+    background-image: none; }
+    .drone-section h1 {
+      font-size: 35px; }
+    .drone-section p {
+      font-size: 15px; }
+    .drone-section ol {
+      display: flex;
+      list-style: none;
+      flex-flow: column wrap;
+      max-width: 50vw;
+      counter-reset: numList; }
+    .drone-section ol li {
+      font-size: 12px;
+      padding: 15px;
+      color: #666;
+      margin-right: 10px; }
+    .drone-section ol li:before {
+      counter-increment: numList;
+      content: counter(numList);
+      float: left;
+      position: absolute;
+      left: -20px;
+      font: bold 12px sans-serif;
+      text-align: center;
+      color: black;
+      line-height: 22px;
+      width: 25px;
+      height: 25px;
+      background: white;
+      border: 2px solid #666;
+      border-radius: 50%;
+      -moz-border-radius: 999px;
+      border-radius: 999px; }
+
+  .portfollio-section .vid-top {
+    background-size: 100% 100%; }
+  .portfollio-section .vid-bot {
+    background-size: 100% 100%; }
+  .portfollio-section .port-content-top h2 {
+    margin-left: 15px;
+    margin-top: 30px;
+    font-size: 25px; }
+  .portfollio-section .port-content-top p {
+    width: 30vw;
+    margin-left: 15px;
+    font-size: 15px; }
+  .portfollio-section .port-content-top .port-btn-1 {
+    margin-left: 15px; }
+  .portfollio-section .port-content-top .port-btn-1:hover {
+    transform: scale(1.1); }
+  .portfollio-section .play-vid:hover {
+    transform: scale(1.1); }
+
+  .newsletter-section {
+    height: 60vh;
+    padding-top: 100px; } }
 
 /*# sourceMappingURL=style.css.map */
