fix logo and scroll

--- a/style.css
+++ b/style.css
@@ -249,6 +249,12 @@ body {
     color: grey; }
 
 @media (max-width: 768px) {
+  .scroll {
+    height: 250px; }
+
+  .logo {
+    margin-left: -90px; }
+
   .navigation {
     display: none; }
 
